# large_image

./: .buildinfo  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Gruntfile.js  LICENSE  MANIFEST.in  README.md  README.rst  Vagrantfile  annotations.html  annotations.html.md  api_index.html  api_index.html.md  bower.json  caching.html  caching.html.md  circle.yml  codecov.yml  config_options.html  config_options.html.md  dependabot.yml  development.html  development.html.md  dicomweb_assetstore.html  dicomweb_assetstore.html.md  example_usage.html  formats.html  formats.html.md  genindex.html  getting_started.html  getting_started.html.md  girder_annotation_config_options.html  (+47 more)
.circleci/: build_plugins.py  config.yml  make_index.py  make_wheels.sh  release_pypi.sh
.doctrees/: annotations.doctree  api_index.doctree  caching.doctree  config_options.doctree  development.doctree  dicomweb_assetstore.doctree  environment.pickle  example_usage.doctree  formats.doctree  getting_started.doctree  girder_annotation_config_options.doctree  girder_caching.doctree  girder_config_options.doctree  girder_index.doctree  image_conversion.doctree  index.doctree  large_image_examples.doctree  multi_source_specification.doctree  notebooks.doctree  plottable.doctree  tilesource_options.doctree  upgrade.doctree
.github/: dependabot.yml
_modules/: girder_large_image.html  girder_large_image_annotation.html  index.html  large_image_converter.html  large_image_source_bioformats.html  large_image_source_deepzoom.html  large_image_source_dicom.html  large_image_source_dummy.html  large_image_source_gdal.html  large_image_source_mapnik.html  large_image_source_multi.html  large_image_source_nd2.html  large_image_source_ometiff.html  large_image_source_openjpeg.html  large_image_source_openslide.html  large_image_source_pil.html  large_image_source_rasterio.html  large_image_source_test.html  large_image_source_tiff.html  large_image_source_tifffile.html  large_image_source_vips.html  large_image_source_zarr.html  large_image_tasks.html
_sources/: annotations.rst.txt  api_index.rst.txt  caching.rst.txt  config_options.rst.txt  development.rst.txt  (+11 more)
(+1070 files in other folders)
